namespace PaymentService.Domain.Contract;

public enum ContractStatus
{
    PendingSignature,
    Signed
}