namespace PaymentService.Domain.Enums;

public enum TransactionType
{
    TopUp,
    ReservationCharge,
    SubscriptionCharge,
    Refund
}